little update and new syntax on module00/ex00

--- a/module00/ex00/Makefile
+++ b/module00/ex00/Makefile
@@ -6,13 +6,14 @@
 #    By: mahkilic <mahkilic@student.42.fr>            +#+                      #
 #                                                    +#+                       #
 #    Created: 2026/01/31 00:59:09 by mahkilic      #+#    #+#                  #
-#    Updated: 2026/01/31 00:59:09 by mahkilic      ########   odam.nl          #
+#    Updated: 2026/02/04 14:51:55 by mahkilic      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 NAME			= megaphone
 CC				= c++
-CPPFLAGS		= -Wall -Wextra -Werror -std=c++11
+CPPFLAGS		= -Wall -Wextra -Werror 
+#CPPFLAGS		+= -std=c++98
 SRCS			= megaphone.cpp
 OBJS			= $(SRCS:%.cpp=%.o)
 
@@ -31,7 +32,6 @@ clean		:
 
 fclean		: clean
 	@ rm -f $(NAME)
-	@ echo " $(NAME) fcleaned!"
 
 re			: fclean all
 
