changed the executable's name

--- a/module00/ex01/Makefile
+++ b/module00/ex01/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME			= PhoneBook
+NAME			= dephonebook
 CC				= c++
 CPPFLAGS		= -Wall -Wextra -Werror
 
